# MMPerp

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  tradecore.toml.example
.beads/: issues.jsonl
.github/workflows/: ci.yml
apps/: CMakeLists.txt
apps/tradecored/: CMakeLists.txt
apps/tradecored/src/: main.cpp
apps/webui/: .oxfmtrc.json  .oxlintrc.json  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/webui/scripts/: oxc-suite.mjs
apps/webui/src/: main.ts  style.css
docs/: INTEGRATION.md
include/tradecore/: config.hpp
libs/: CMakeLists.txt
libs/api/: CMakeLists.txt
libs/api/include/tradecore/api/: api_router.hpp
libs/api/src/: api_router.cpp
libs/auth/: CMakeLists.txt
libs/auth/include/tradecore/auth/: authenticator.hpp
libs/auth/src/: authenticator.cpp
libs/common/: CMakeLists.txt
libs/common/include/tradecore/common/: spsc_ring.hpp  time_utils.hpp  types.hpp
libs/common/src/: time_utils.cpp  types.cpp
libs/config/: CMakeLists.txt
libs/config/include/tradecore/config/: config_loader.hpp
libs/config/src/: config_loader.cpp
libs/funding/: CMakeLists.txt
libs/funding/include/tradecore/funding/: funding_applicator.hpp  funding_engine.hpp
libs/funding/src/: funding_applicator.cpp  funding_engine.cpp
libs/ingest/: CMakeLists.txt
libs/ingest/include/tradecore/ingest/: frame.hpp  ingress_pipeline.hpp  quic_transport.hpp  sbe_messages.hpp  transport.hpp
libs/ingest/src/: ingress_pipeline.cpp  quic_transport.cpp  transport.cpp
libs/ledger/: CMakeLists.txt
libs/ledger/include/tradecore/ledger/: ledger_state.hpp
libs/ledger/src/: ledger_state.cpp
libs/matcher/: CMakeLists.txt
libs/matcher/include/tradecore/matcher/: matching_engine.hpp
libs/matcher/src/: matching_engine.cpp
libs/replay/: CMakeLists.txt
libs/replay/include/tradecore/replay/: replay_driver.hpp
libs/replay/src/: replay_driver.cpp
libs/risk/: CMakeLists.txt
libs/risk/include/tradecore/risk/: liquidation_engine.hpp  liquidation_executor.hpp  risk_engine.hpp
libs/risk/src/: liquidation_engine.cpp  liquidation_executor.cpp  risk_engine.cpp
libs/snapshot/: CMakeLists.txt
libs/snapshot/include/tradecore/snapshot/: snapshot_store.hpp
libs/snapshot/src/: snapshot_store.cpp
libs/telemetry/: CMakeLists.txt
libs/telemetry/include/tradecore/telemetry/: telemetry_sink.hpp
libs/telemetry/src/: telemetry_sink.cpp
libs/wal/: CMakeLists.txt
libs/wal/include/tradecore/wal/: wal_writer.hpp
libs/wal/src/: wal_writer.cpp
tests/unit/: CMakeLists.txt  main.cpp  test_api.cpp  test_api.hpp  test_funding.cpp  test_funding.hpp  test_ingest.cpp  test_ingest.hpp  test_ledger.cpp  test_ledger.hpp  test_matcher.cpp  test_matcher.hpp  test_persistence.cpp  test_persistence.hpp  test_risk.cpp  test_risk.hpp  test_telemetry.cpp  test_telemetry.hpp
